--- a/style_investpol.css
+++ b/style_investpol.css
@@ -22,7 +22,7 @@ body
 header
 {
 	width: 1220px;
-	background-image:url(header.png);
+	background-image:url(img/header.png);
 	background-repeat: no-repeat;
 	background-size: 100%;
 }
@@ -196,8 +196,6 @@ ol li a
 	color: #000;
 }
 
-
-
 #wrapper
 {
 	width: 1220px;
@@ -210,59 +208,6 @@ ol li a
 	display: block;
 	clear: both;
 }
-
-#investpol_logo{
-    width: 100%;
-    height: 47px;
-    background-image: url(img/investpol_logo.png);
-    background-repeat: no-repeat;
-}
-
-#producents {
-    width: 500px;
-    height: 67px;
-    margin: 0 30% 0 29%;
-    margin-bottom: 8%;
-}
-
-#illbruck{
-    width: 40%;
-    height: 67px;
-    background-image: url(img/illbruck_logo.png);
-    background-repeat: no-repeat;
-    margin: 5%;
-    float: left;
-}
-
-#exte {
-    width: 40%;
-    height: 50px;
-    background-image: url(img/exte_logo.png);
-    background-repeat: no-repeat;
-    margin:5%; 
-    float: left;
-}
-
-#gpmm{
-    width: 200px;
-    height: 45px;
-    background-image: url(img/gpmm_logo.png);
-    margin:auto;    
-}
-
-#gp{
-    width: 100%;
-    margin: 0 18% 0 18%;
-}
-
-.gpmm{
-    width: 250px;
-    height: 147px;
-    margin: 3% 2% 3% 2%;
-    background-repeat: no-repeat;
-    float: left;
-}
-
 
 
 
@@ -545,7 +490,7 @@ aside:hover
 
 #submit
 {
-	background-image: url(sign_form.jpg);
+	background-image: url(img/sign_form.jpg);
 	display: block;
 	width: 24px;
 	height: 26px;
@@ -803,7 +748,7 @@ header
 {
 	width: 100%;
 	height: auto;
-	background-image: url(header_mini.jpg);
+	background-image: url(img/header_mini.jpg);
 	background-repeat: no-repeat;
 	background-size: 100%;
 }
@@ -833,6 +778,8 @@ nav
 	align-self: center;
 	margin-top: 0;
 	align-self: all;
+	position: relative;
+	z-index: 1;
 	overflow-y: scroll;
 	background-color: rgba(255, 255, 255, 0.6);
 }
@@ -843,14 +790,16 @@ nav:before
 	content: "  ";
 	font-size: 30px;
 	float: left;
-	background-image: url(menu.jpg);
+	background-image: url(img/menu.jpg);
 	width: 70px;
-	margin-left: 30px;
+	margin-left: 20px;
 	background-repeat: no-repeat;
 	opacity: 0.6;
 	background-size: 100%;
 	height: 70px;
 	cursor: pointer;
+	position: absolute;
+	z-index: 2;
 }
 
 nav > ol
@@ -1052,7 +1001,7 @@ nav
 	margin-top: 30;
 	align-self: all;
 	text-align: center;
-	overflow-y: scroll;
+	z-index: 1;
 	vertical-align: top;
 	background-color: rgba(190, 190, 190, 0.6);
 }
@@ -1063,33 +1012,34 @@ nav:before
 	content: "  ";
 	font-size: 30px;
 	float: left;
-	background-image: url(menu.jpg);
+	background-image: url(img/menu.jpg);
 	width: 70px;
-	margin-left: 30px;
+	margin-left: 50px;
 	background-repeat: no-repeat;
 	opacity: 0.6;
 	background-size: 100%;
 	height: 70px;
 	cursor: pointer;
+	z-index: 5;
 }
 
 nav > ol
 {
 	flex-direction: column;
 	margin: 0 10%;
-	width: 100px;
+	width: 150px;
 }
 
 nav > ol > li
 {
-	display: none;
+	/*display: none;*/
 	position: relative;
 }
 
 nav > ol > a
 {
 	display: inline-block;
-	width: 80%;
+	width: 150px;
 	margin: 0 10%;
 	text-decoration-style: none;
 	color: #000;
